# payelink-agent-identity-sdk

./: README.md  main.py  pyproject.toml
examples/: agent_usage.py  basic_generation.py
payelink_agent_identity/cli/: __init__.py  commands.py
payelink_agent_identity/crypto/: __init__.py  keys.py
payelink_agent_identity/methods/: __init__.py  base.py
payelink_agent_identity/sdk/: document_builder.py  generator.py  identity.py  key_manager.py  resolver.py  types.py
payelink_agent_identity/utils/: __init__.py  constants.py  encoding.py  validation.py
payelink_did/: __init__.py
payelink_did/sdk/: __init__.py
